2005-01-17  Joel Rosdahl  <joel@rosdahl.net>

	* irclib.py (ServerConnection.quit): Added comment about how some
	IRC servers' treat QUIT messages. Patch from Jeff Huang.

	* ircbot.py (SingleServerIRCBot.jump_server): Improved jump_server
	behaviour. Patch from Jeff Huang.

2004-08-04  Joel Rosdahl  <joel@rosdahl.net>

	* irclib.py (ServerConnection.process_data): Added "bonus" action
	event that is triggered on CTCP ACTION messages.

2004-07-09  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.2.

	* debian/rules: Remove built *.pyc files before making package.

	* irclib.py (DEBUG):
	* debian/changelog:
	* python-irclib.spec.in:
	Preparations for version 0.4.2.

	* irclib.py (ServerNotConnectedError): New exception.
	(ServerConnection.send_raw): Fix bug #922446, "Raise
	IllegalStateException in send_raw when disconnected".

2003-10-30  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.1.

	* debian/examples: Added dccreceive and dccsend as example files
	in Debian.

	* python-irclib.spec.in: Likewise.

2003-10-29  Joel Rosdahl  <joel@rosdahl.net>

	* debian: Added Debian packaging files.

	* setup.py.in: Create setup.py from setup.py.in.

	* python-irclib.spec.in: RPM spec file from Gary Benson.

	* testbot.py (TestBot.on_nicknameinuse): New method.

	* irclib.py (ServerConnection.process_data): Record nickname when
	welcome message is sent to trap nickname change triggered in a
	nicknameinuse callback.

	* ircbot.py (SingleServerIRCBot._on_join): Use
	Connection.get_nickname instead of relying on self._nickname.
	(SingleServerIRCBot._on_kick): Likewise.
	(SingleServerIRCBot._on_part): And here too.
	(SingleServerIRCBot._on_nick): No need to remember nickname change
	here.

2003-08-31  Joel Rosdahl  <joel@rosdahl.net>

	* Released version 0.4.0.

	Implemented DCC support (based on patches from Adam Langley and
	Marco Bettio):

	* irclib.py (IRC.dcc): New method.
	(DCCConnectionError): New class.
	(DCCConnection): New class.