@@ -1,5 +1,10 @@
 2005-01-17  Joel Rosdahl  <joel@rosdahl.net>
 
+	* ircbot.py (SingleServerIRCBot._on_namreply): Improved comment
+	about arguments to the function. Patch from Jeff Huang.
+	(Channel.has_allow_external_messages): Renamed from
+	has_message_from_outside_protection. Patch from Jeff Huang.
+
 	* irclib.py (ServerConnection.quit): Added comment about how some
 	IRC servers' treat QUIT messages. Patch from Jeff Huang.
 
